source/java/org.wcs.smart.dataentry/shared/org/wcs/smart/dataentry/visiblewhen/filter/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package org.wcs.smart.dataentry.visiblewhen.filter;

import java.util.*;
import org.wcs.smart.filter.*;

public class Parser implements ParserConstants {

/* ------------ Expressions ----------------------*/
  final public IFilter ParseQuery() throws ParseException {
  IFilter expr = null;
    expr = ExpressionPart();
    jj_consume_token(0);
  {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter ExpressionPart() throws ParseException {
  IFilter expr = null;
  Operator op = null;
  IFilter expr2 = null;
    expr = BooleanPart();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_AND:
      case K_OR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      op = BooleanOp();
      expr2 = BooleanPart();
                  expr = BooleanFilter.create(expr, expr2, op);
    }
          {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter BooleanPart() throws ParseException {
  IFilter filter = null;
  boolean hasNot = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_NOT:
      jj_consume_token(K_NOT);
                    hasNot = true;
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATT_STR_KEY:
    case ATT_VALUE_KEY:
    case ATT_BOOL_KEY:
    case ATT_LIST_KEY:
    case ATT_MLIST_KEY:
    case ATT_TREE_KEY:
    case ATT_DATE_KEY:
      filter = AttributeExpression();
      break;
    case OPENPAREN:
      jj_consume_token(OPENPAREN);
      filter = ExpressionPart();
      jj_consume_token(CLOSEPAREN);
                        filter = BracketFilter.createFilter(filter);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                if (hasNot){
              filter = NotFilter.createNotExpression(filter);
            }
                {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter BooleanItemExpression() throws ParseException {
  IFilter filter = null;
    jj_consume_token(ATT_BOOL_KEY);
        filter = AttributeFilter.createBooleanFilter(token.image);
        {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter NumberExpression() throws ParseException {
  IFilter filter = null;
  Operator op = null;
  String key = null;
  Double value = null;
    jj_consume_token(ATT_VALUE_KEY);
                                  key = token.image;
    op = NumberOp();
    jj_consume_token(NUMBER);
                            value = Double.parseDouble(token.image);
                filter = AttributeFilter.createValueFilter(key, op, value);
                {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter AttributeExpression() throws ParseException {
        IFilter filter = null;
        String key;
        Operator op;
        String value;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATT_STR_KEY:
      /* String comparison */
              filter = StringExpression();
      break;
    case ATT_VALUE_KEY:
      /* Numeric comparison */
              filter = NumberExpression();
      break;
    case ATT_BOOL_KEY:
      /* boolean */
              filter = BooleanItemExpression();
      break;
    case ATT_DATE_KEY:
      /* date */
              filter = DateItemExpression();
      break;
    case ATT_LIST_KEY:
      jj_consume_token(ATT_LIST_KEY);
                                  key = token.image;
      jj_consume_token(EQUAL);
                            op = Operator.parseOperator(token.image);
      jj_consume_token(DM_KEY);
                             value = token.image;
                filter = AttributeFilter.createListItemFilter(key,op,value);
      break;
    case ATT_MLIST_KEY:
      jj_consume_token(ATT_MLIST_KEY);
                                   key = token.image;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_OR:
        jj_consume_token(K_OR);
        break;
      case K_AND:
        jj_consume_token(K_AND);
        break;
      case K_EXACT:
        jj_consume_token(K_EXACT);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                       op = Operator.parseOperator(token.image);
      value = MultiList();
                filter = AttributeFilter.createListItemFilter(key,op,value);
      break;
    case ATT_TREE_KEY:
      jj_consume_token(ATT_TREE_KEY);
                                  key = token.image;
      jj_consume_token(EQUAL);
                            op = Operator.parseOperator(token.image);
      jj_consume_token(DM_KEY);
                             value = token.image;
                filter = AttributeFilter.createTreeItemFilter(key,op,value);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter DateItemExpression() throws ParseException {
  IFilter filter = null;
  String key = null;
  String date1 = null;
  String date2 = null;
  Operator op = null;
    jj_consume_token(ATT_DATE_KEY);
                                  key = token.image;
    op = DateOp();
    jj_consume_token(DATE_STRING);
                                  date1 = token.image;
    jj_consume_token(K_AND);
    jj_consume_token(DATE_STRING);
                                 date2 = token.image;
                filter = AttributeFilter.createDateFilter(key, date1, date2, op);
                {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter StringExpression() throws ParseException {
  IFilter filter = null;
  Operator op = null;
  String key = null;
  String value = null;
    jj_consume_token(ATT_STR_KEY);
                         key = token.image;
    op = StringOp();
    jj_consume_token(QUOTED_STRING);
                           value = token.image;
                filter = AttributeFilter.createStringFilter(key, op, value);
                {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public String MultiList() throws ParseException {
  String list = "";
    jj_consume_token(DM_KEY);
                  list=token.image;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      jj_consume_token(DM_KEY);
                                                           list += "," + token.image;
    }
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public Operator NumberOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
      jj_consume_token(EQUAL);
      break;
    case NOTEQUAL:
      jj_consume_token(NOTEQUAL);
      break;
    case NOTEQUAL2:
      jj_consume_token(NOTEQUAL2);
      break;
    case GREATER:
      jj_consume_token(GREATER);
      break;
    case GREATEREQUAL:
      jj_consume_token(GREATEREQUAL);
      break;
    case LESS:
      jj_consume_token(LESS);
      break;
    case LESSEQUAL:
      jj_consume_token(LESSEQUAL);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return Operator.parseOperator(token.image);}
    throw new Error("Missing return statement in function");
  }

  final public Operator StringOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONTAINS:
      jj_consume_token(CONTAINS);
      break;
    case STREQUALS:
      jj_consume_token(STREQUALS);
      break;
    case NOT_CONTAINS:
      jj_consume_token(NOT_CONTAINS);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return Operator.parseOperator(token.image);}
    throw new Error("Missing return statement in function");
  }

  final public Operator BooleanOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_AND:
      jj_consume_token(K_AND);
      break;
    case K_OR:
      jj_consume_token(K_OR);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return Operator.parseOperator(token.image);}
    throw new Error("Missing return statement in function");
  }

  final public Operator DateOp() throws ParseException {
  String fulltoken = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BETWEEN:
      jj_consume_token(BETWEEN);
                fulltoken = token.image;
      break;
    case K_NOT:
      jj_consume_token(K_NOT);
                   fulltoken = token.image;
      jj_consume_token(BETWEEN);
                     fulltoken = fulltoken + " " + token.image;
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return Operator.parseOperator(fulltoken);}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  JavaCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[10];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x280,0x100,0x80000,0x680,0x0,0x800,0x7f000,0x7000000,0x280,0x8000100,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0xfe,0x0,0xfe,0x0,0x0,0x0,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[45];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 10; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 45; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
